--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -12,7 +12,7 @@
     <header>
         <div class="content">
             <h1>GRAND LUXE LIMOUSINE</h1>
-            <p>Reliable car service..</p>
+            <p>Reliable car service..<br>COMING SOON</p>
             <div>
                 <button><a href="LEARNMORE.html">LEARN MORE</a></button>
                 <button><a href="CONTACT.html">CONTACT</a></button>
