--- a/CONTACT.html
+++ b/CONTACT.html
@@ -6,8 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+
 </head>
-<body>
+
+
+<body class="contact">
+    <div class="container">
+        <form action="/action_page.php">
+            <div class="row">
+                <div class="col-25">
+                    <label for="fname">Name</label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="fname" name="name" placeholder="name">
+                </div>
+            </div>
+        </form>
+    </div>
     
 </body>
 </html>
